[package]
name = "server_three"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.9.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
steganography = "1.0.2"
base64 = "0.21.5"
rand = "0.8"
sysinfo = "0.29.11"
